<resources>
    <string name="app_name">LANPUSH</string>
    <string name="first_fragment_label">LANPUSH</string>
    <string name="first_message">Received messages will be displayed here.\nYou can send texts by clicking the button on the bottom.\nYou can also send messages directly from outside the app by selecting text or by sharing web links and selecting "LANPUSH".\nOn the superior menu on the right, you can close the application properly and also change settings.\nYou may have to change at least the IP settings according to your private network.\n</string>
    <string name="action_settings">Settings</string>
    <!--<string name="action_reconnection">Force reconnection</string>-->
    <string name="action_about">Help and about</string>
    <string name="action_close">Disconnect and close</string>
    <!-- Strings used for fragments for navigation -->

    <string name="about">Version 2022.1 \n\nLANPUSH is a free project and it\'s open for suggestions. Visit the project space on github for more info or help.</string>
    <string name="about_git">Visit</string>
    <string name="about_close">Close</string>


    <!-- Preference Titles -->
    <string name="preference_connection_header">Connection</string>
    <string name="preference_ui_header">Interface</string>
    <string name="preference_debug_header">Debug</string>
    <string name="sync_header">Sync</string>

    <!-- Connection Preferences -->
    <string name="settings_ips">IPs (for sending)</string>
    <string name="settings_ips_key">IPs</string>
    <string name="settings_ips_default">192.168.0.255</string>
    <string name="settings_UDP_port">UDP Port (for sending and receiving)</string>
    <string name="settings_UDP_port_key">PORT</string>
    <string name="settings_UDP_port_default">1050</string>
    <string name="settings_timeout">Reconnection period</string>
    <string name="settings_timeout_key">TIMEOUT</string>
    <string name="settings_timeout_summary">Time (in ms) to wait for a message</string>
    <string name="settings_autostart">Auto start on reboot</string>
    <string name="settings_autostart_key">AUTOSTART</string>
    <string name="settings_autostart_default">false</string>
    <string name="settings_autostart_summary">Starts listening the network on system boot</string>
    <string name="settings_sleep">Sleep from midnight to dawn</string>
    <string name="settings_sleep_key">SLEEP</string>
    <string name="settings_sleep_default">false</string>
    <string name="settings_sleep_summary">Stops listening for messages from 0:00 to 6:00. May save a bit of energy.</string>

    <!-- Interface Preferences -->
    <string name="settings_log_limit">Message limit</string>
    <string name="settings_log_limit_key">MESSAGE_LIMIT</string>
    <string name="settings_log_limit_default">100</string>
    <string name="settings_log_limit_summary">Maximum number of last messages to display</string>

    <!-- Debug Preferences -->
    <string name="settings_enable_debug">Enable debug</string>
    <string name="settings_enable_debug_key">ENABLE_DEBUG</string>
    <string name="settings_enable_debug_default">false</string>
    <string name="settings_enable_debug_summary">Enable debug for more logs</string>
    <string name="settings_debug_ip">Debug Host IP</string>
    <string name="settings_debug_ip_default">192.168.0.255</string>
    <string name="settings_debug_ip_key">DEBUG_HOST</string>
    <string name="settings_debug_ip_summary">IP of the host to receive debug messages</string>
    <string name="settings_debug_port">UDP Debug Port</string>
    <string name="settings_debug_port_key">DEBUG_PORT</string>
    <string name="settings_debug_port_default">1051</string>
    <string name="settings_debug_port_summary">Port for sending debug messages</string>

</resources>