<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"> <!--xmlns:android="http://schemas.android.com/apk/res/android"-->

    <PreferenceCategory app:title="@string/preference_connection_header">

        <EditTextPreference
            app:key="@string/settings_ips_key"
            app:title="@string/settings_ips"
            app:defaultValue="@string/settings_ips_default"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="@string/settings_UDP_port_key"
            app:title="@string/settings_UDP_port"
            app:defaultValue="@string/settings_UDP_port_default"
            app:useSimpleSummaryProvider="true"/>

        <!--
        <EditTextPreference
            app:key="timeout"
            app:title="@string/settings_timeout"
            app:useSimpleSummaryProvider="true"
            app:summary="@string/settings_timeout_summary"/>
            -->

        <SwitchPreferenceCompat
            app:key="@string/settings_autostart_key"
            app:title="@string/settings_autostart"
            app:defaultValue="@string/settings_autostart_default"
            app:useSimpleSummaryProvider="true"
            app:summary="@string/settings_autostart_summary" />

        <SwitchPreferenceCompat
            app:key="@string/settings_sleep_key"
            app:title="@string/settings_sleep"
            app:defaultValue="@string/settings_sleep_default"
            app:useSimpleSummaryProvider="true"
            app:summary="@string/settings_sleep_summary" />

       <!-- <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />-->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preference_ui_header">
        <EditTextPreference
            app:key="@string/settings_log_limit_key"
            app:title="@string/settings_log_limit"
            app:defaultValue="@string/settings_log_limit_default"
            app:useSimpleSummaryProvider="true"
            app:summary="@string/settings_log_limit_summary"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/preference_debug_header">

        <SwitchPreferenceCompat
            app:key="@string/settings_enable_debug_key"
            app:title="@string/settings_enable_debug"
            app:defaultValue="@string/settings_enable_debug_default"
            app:useSimpleSummaryProvider="true"
            app:summary="@string/settings_enable_debug_summary" />

        <EditTextPreference
            app:key="@string/settings_debug_ip_key"
            app:title="@string/settings_debug_ip"
            app:defaultValue="@string/settings_debug_ip_default"
            app:useSimpleSummaryProvider="true"
            app:summary="@string/settings_debug_ip_summary"
            app:dependency="@string/settings_enable_debug_key"/>

        <EditTextPreference
            app:key="@string/settings_debug_port_key"
            app:title="@string/settings_debug_port"
            app:defaultValue="@string/settings_debug_port_default"
            app:useSimpleSummaryProvider="true"
            app:summary="@string/settings_debug_port_summary"
            app:dependency="@string/settings_enable_debug_key"/>

    </PreferenceCategory>

</PreferenceScreen>